2005-03-13  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/installer.rb (Gem::Installer#shebang): Refactored and
	stripped result to avoid ^M issues.

2005-03-11  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/gem_commands.rb (Gem::DependencyCommand): Added a
	new command "gem dependency" to show the dependencies of an
	installed gem.

	* lib/rubygems/cmd_manager.rb (Gem::CommandManager::initialize):
	Added DependencyCommand to the command manager registrar.

	* lib/rubygems/version.rb (Gem::Requirement): Unnested Requirement
	from the Version class.  There was no benefit to having it nested.
	Gem::Version::Requirement is set to point to the new class so to
	be compatible with old gems.

	* lib/rubygems/installer.rb (Gem::Uninstaller::ask_if_ok): Changed
	uninstaller confirm message to read 'Continue with uninstall'.
	Its clearer that way.

	* lib/rubygems.rb (Gem::Exception::required_location): Switch to
	use SourceIndex#find_name rather than search.  Made sure a nil
	value is returned with a path is not found.

	* lib/rubygems/source_index.rb (Gem::SourceIndex::search): Changed
	parameter name to gem_pattern to emphasize using Regex in search.
	(Gem::SourceIndex::find_name): Added find_name to handle the
	common case of searching for an exact match on the short name.

	* lib/rubygems.rb (Gem::Exception::activate): Make sure that
	activate more closely adheres to honoring the auto_require=>false
	request.
	(Gem::Exception::report_activate_error): Out of line error
	reporting for activate.

	* lib/rubygems/remote_installer.rb
	(Gem::RemoteInstaller::find_dependencies_not_installed): Found
	another location that was using require_gem with auto_require.
	Fixed to use :auto_require=>false.

	* lib/rubygems/gem_commands.rb
	(Gem::InstallUpdateOptions::add_install_update_options): Added
	--ignore-dependencies option.  Still needs to be wired to logic.

	* lib/rubygems/installer.rb (Gem::Installer::install): Added call
	to require_gem_with_options.
